k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    # defines how the Deployment finds which Pods to manage
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        # container image is referenced from GCR (Google Container Registry)
        # make sure your tag (:1 or :2) is correct for the image you are downloading
        - image: eu.gcr.io/j6uluh2kk/demo:1
          resources:
            # how much resources container is guaranteed to get
            requests:
              # defined in millicores
              cpu: 100m
              memory: 200Mi
            # upper limit that container can acquire even if node has plenty of resources
            limits:
              cpu: 200m
              memory: 400Mi
          name: demo
          ports:
            - containerPort: 8080
          # used to check if application is healthy
          livenessProbe:
            httpGet:
              path: /api/christmas
              port: 3080
            initialDelaySeconds: 100
          # used to check if it is ready (i.e. could route traffic)
          readinessProbe:
            httpGet:
              path: /api/christmas
              port: 3080
            initialDelaySeconds: 100
