k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: NAME
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # We rewrite the path /${yourName} to /, so if you go to browser with 34.76.84.93.nip.io/${yourName}/actuator/health,
    # it will resolve it to /actuator/health in the application (without the yourname in the path)
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 34.76.84.93.nip.io
      http:
        paths:
          - path: /NAME/(.*)
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
